# xszo-gen

./: .gitignore  .gitmodules  .prettierrc  Pipfile  README  README.md  gen  ini  pyproject.toml  requirements.txt  run
.github/: dependabot.yml
.github/workflows/: pages.yml
src/: __init__.py  ash.py  ren.py  run.py
src/env/: pip
src/filter/: dodump.py  doget.py  dolist.py  domix.py  dovlc.py  dump.py  getrex.py  getvar.py  getvlc.py  load.py  mixer.py  remix.py  ren.py  run.py  run.yml  var.py
src/lib/: dict.py  list.py  net.py  var.py
src/net/: dodump.py  doload.py  dump.py  load.py  main.py  main.yml  ren.py  run.py  run.yml  var.py
src/net/clash/: Stash.yml.py  base.yml  config.yaml.py  scv.ini.py  scv.yml.py  scv_ini.py  scv_yml.py  stash.py  stash.yml.py
src/net/dump/: clash.py  clash_convert.py  clash_scv.py  clash_stash.py  conv.conf  loon.py  quantumult.py  shadowrocket.py  surge.py
src/net/dumps/: clash.py  clash_conv.py  clash_convert.py  conv.conf  conv.py  loon.py  quantumult.py  shadowrocket.py  surge.py
src/net/filter/: main.py  run.py
src/net/other/: loon.conf.py  loon.py  scv.ini  shadowrocket.conf.py  (+1 more)
src/run/: cmd.py  docmd.py  gen.py  ini-git.py  ini-pip.py  ini-python.py  ini-unix.py  out.py  ren.py  run.py  run.yml  var.py
var/: base.yml  main.yml  pattern.yml  re.yml
var/filter/: direct.yml  global.yml  lan.yml  list.yml  local.yml  media.yml  r-cn.yml  r-jp.yml  r-tw.yml  r-us.yml  specfi.yml  system.yml  world.yml
var/net/: ad.yml  base.yml  cn.yml  list.yml  main.yml  mini.yml  other.yml  profile.yml  s.yml
(+22 files in other folders)
